--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <a class="link" href="#">Company Name</a>
             </div>
             <div class="menu">
-                <a href="#">Feature</a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
+                <a href="#">Features</a>
+                <a href="#">Interprice</a>
+                <a href="#">Support</a>
+                <a href="#">Pricing</a>
             </div>
         </nav>
     </header>
