--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title> Home Responsive Pricing Pag</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,13 +21,15 @@
                     <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 6.375c0 2.278-3.694 4.125-8.25 4.125S3.75 8.653 3.75 6.375m16.5 0c0-2.278-3.694-4.125-8.25-4.125S3.75 4.097 3.75 6.375m16.5 0v11.25c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125V6.375m16.5 0v3.75m-16.5-3.75v3.75m16.5 0v3.75C20.25 16.153 16.556 18 12 18s-8.25-1.847-8.25-4.125v-3.75m16.5 0c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125" />
                     </svg>
                 </div>
-                <a class="link" href="#">Company Name</a>
+                <span class="link" href="#">Company Name</span>
             </div>
             <div class="menu">
                 <a href="#">Features</a>
                 <a href="#">Interprice</a>
                 <a href="#">Support</a>
                 <a href="#">Pricing</a>
+                <button id="btn-sign">Sigin Up</button>
+            </div>
             </div>
         </nav>
     </header>
