--- a/index.html
+++ b/index.html
@@ -39,41 +39,44 @@
             <p>Lorem Lorem ipsum dolor, sit amet consectetur Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, cupiditate.adipisicing elit. Aliquid, temporibus. ipsum dolor sit amet consectetur adipisicing elit. Dignissimos doloribus odio
                 eligendi voluptatibus et distinctio sequi iure a.</p>
         </div>
-        <div class="card">
-            <div class="head">
-                <p>Free</p>
-            </div>
-            <div class="price">
-                <span>$0 / mo</span>
-                <span>
+        <div class="cards">
+            <div class="card">
+                <div class="head">
+                    <p>Free</p>
+                </div>
+                <div class="price">
+                    <span>$0 / mo</span>
+                    <span>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, non.
                 </span>
+                </div>
+                <div class="btn-buy"><button>Get started</button></div>
             </div>
-            <div class="btn-buy"><button>Get started</button></div>
-        </div>
-        <div class="card">
-            <div class="head">
-                <p>Free</p>
-            </div>
-            <div class="price">
-                <span>$0 / mo</span>
-                <span>
+
+            <div class="card">
+                <div class="head">
+                    <p>Free</p>
+                </div>
+                <div class="price">
+                    <span>$0 / mo</span>
+                    <span>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, non.
                 </span>
+                </div>
+                <div class="btn-buy"><button>Get started</button></div>
             </div>
-            <div class="btn-buy"><button>Get started</button></div>
-        </div>
-        <div class="card">
-            <div class="head">
-                <p>Free</p>
-            </div>
-            <div class="price">
-                <span>$0 / mo</span>
-                <span>
+            <div class="card">
+                <div class="head">
+                    <p>Free</p>
+                </div>
+                <div class="price">
+                    <span>$0 / mo</span>
+                    <span>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, non.
                 </span>
+                </div>
+                <div class="btn-buy"><button>Get started</button></div>
             </div>
-            <div class="btn-buy"><button>Get started</button></div>
         </div>
     </main>
 </body>
