--- a/index.html
+++ b/index.html
@@ -45,35 +45,50 @@
                     <p>Free</p>
                 </div>
                 <div class="price">
-                    <span>$0 / mo</span>
-                    <span>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, non.
-                </span>
+                    <div id="mab">
+                        <strong>$0</strong><span>  / mo</span>
+                    </div>
+                    <ul>
+                        <li>20 users included</li>
+                        <li>10 GB of storage</li>
+                        <li>Priority email support</li>
+                        <li>Help center access</li>
+                    </ul>
                 </div>
                 <div class="btn-buy"><button>Get started</button></div>
             </div>
 
             <div class="card">
                 <div class="head">
-                    <p>Free</p>
+                    <p>Pro</p>
                 </div>
                 <div class="price">
-                    <span>$0 / mo</span>
-                    <span>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, non.
-                </span>
+                    <div id="mab">
+                        <strong>$15</strong><span>  / mo</span>
+                    </div>
+                    <ul>
+                        <li>50 users included</li>
+                        <li>30 GB of storage</li>
+                        <li>Priority email support</li>
+                        <li>Custom features</li>
+                    </ul>
                 </div>
                 <div class="btn-buy"><button>Get started</button></div>
             </div>
             <div class="card">
                 <div class="head">
-                    <p>Free</p>
+                    <p>Enterprise</p>
                 </div>
                 <div class="price">
-                    <span>$0 / mo</span>
-                    <span>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, non.
-                </span>
+                    <div id="mab">
+                        <strong>$29</strong><span>  / mo</span>
+                    </div>
+                    <ul>
+                        <li>50 users included</li>
+                        <li>30 GB of storage</li>
+                        <li>Priority email support</li>
+                        <li>Custom features</li>
+                    </ul>
                 </div>
                 <div class="btn-buy"><button>Get started</button></div>
             </div>
