--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <li>Help center access</li>
                     </ul>
                 </div>
-                <div class="btn-buy"><button>Get started</button></div>
+                <button class="btn-buy">Get started</button>
             </div>
 
             <div class="card">
@@ -73,7 +73,7 @@
                         <li>Custom features</li>
                     </ul>
                 </div>
-                <div class="btn-buy"><button>Get started</button></div>
+                <button class="btn-buy">Get started</button>
             </div>
             <div class="card">
                 <div class="head">
@@ -90,7 +90,7 @@
                         <li>Custom features</li>
                     </ul>
                 </div>
-                <div class="btn-buy"><button>Get started</button></div>
+                <button class="btn-buy">Get started</button>
             </div>
         </div>
     </main>
