--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             </div>
             </div>
         </nav>
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
     <main>
         <div class="pricing">
@@ -95,5 +100,6 @@
         </div>
     </main>
 </body>
+<script src="./app.js"></script>
 
 </html>
